--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Your Name # your name (or website title) here
+title: Ram Rallabandi # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Data Driven Accountant who loves taxes
+  Data Driven Professional who comes from B2B Sales
   <br><br>
-  Sports. Dog dad. Teching analytics. 
+  Sports. Dad. Learn Analytics 
   <br><br>
   <a href="https://www.linkedin.com/in/averyjsmith/">View My LinkedIn Profile</a> 
   
