--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Ram Rallabandi # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/4V1A0199-copy-2.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Driven Professional who comes from B2B Sales
   <br><br>
   Sports. Dad. Learn Analytics 
   <br><br>
-  <a href="https://www.linkedin.com/in/averyjsmith/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/ram-rallabandi/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
