--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ram Rallabandi # your name (or website title) here
-logo: "/images/4V1A0199-copy-2.png?raw=true" # your photo (or logo) here
+logo: "/images/profile_pic.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Driven Professional who comes from B2B Sales
   <br><br>
